--- a/JackVueVite/package.json
+++ b/JackVueVite/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.3.2",
+    "bootstrap": "^5.3.0-alpha1",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
@@ -16,7 +18,6 @@
     "@rushstack/eslint-patch": "^1.1.4",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
-    "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "prettier": "^2.7.1",
     "vite": "^4.0.0"
